# OffensiveMagic

./: readme.md
DecoyWCustomGames/: readme.md  setup.sh
DecoyWCustomGames/magiskModule/: install.sh  module.prop  post-fs-data.sh
DecoyWCustomGames/magiskModule/system/product/app/: .gitignore
GameHackingModule/: settings.gradle.kts  setup.sh
GameHackingModule/app/: build.gradle.kts
GameHackingModule/app/src/main/jni/: Android.mk  zygiskcode.cpp
GameHackingModule/app/src/main/res/values/: themes.xml
GameHackingModule/magiskModule/: install.sh  module.prop
InsecureDataStorage/: readme.md  setup.sh
InsecureDataStorage/magiskModule/: install.sh  module.prop  service.sh
NativeProtectionsBypass/: readme.md  setup.sh
NativeProtectionsBypass/app/src/main/: AndroidManifest.xml
NativeProtectionsBypass/app/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  zygiskcode.cpp
NativeProtectionsBypass/app/src/main/res/values/: strings.xml
NativeProtectionsBypass/app/src/main/res/values-night/: themes.xml
NativeProtectionsBypass/gradle/wrapper/: gradle-wrapper.properties
NativeProtectionsBypass/magiskModule/: install.sh  module.prop
